--- a/nginx.conf
+++ b/nginx.conf
@@ -1,87 +1,93 @@
+
+
+# HTTP redirect
 server {
-    listen 80;
-    server_name localhost;
-    
-    # 根目錄指向儀表板
-    root /usr/share/nginx/html;
-    index index.html;
-    
-    # 安全標頭
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'nonce-$request_id'; style-src 'self' 'nonce-$request_id';" always;
-    
-    # 壓縮設定
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
-    
-    # 主應用程式路由（靜態文件）
-    location / {
-        try_files $uri $uri/ =404;
-    }
-    
-    # API 代理 - Contracts L1 服務
-    location /api/v1/contracts/ {
-        proxy_pass http://contracts-l1:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        
-        # 超時設定
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-    }
-    
-    # API 代理 - MCP Servers
-    location /api/v1/mcp/ {
-        proxy_pass http://mcp-servers:3001/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-    }
-    
-    # 健康檢查端點
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
-    }
-    
-    # 圖片、字型等可長期快取
-    location ~* \.(jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+	listen 3222;
+	listen [::]:3222;
+
+	server_name _;
+    location = /auth {
+        internal;
+        set $query '';
+        if ($request_uri ~* "[^\?]+\?(.*)$") {
+            set $query $1;
+        }
+
+        proxy_pass http://127.0.0.1:8080/auth?$query;
+        auth_request_set $saved_set_cookie $upstream_http_set_cookie;
+        add_header Set-Cookie $saved_set_cookie;
+
+        proxy_pass_request_body off;
+        proxy_set_header        Content-Length "";
+        proxy_set_header        X-Original-URI $request_uri;
     }
 
-    # CSS/JS 快取 7 天，並強制 revalidate
-    location ~* \.(css|js)$ {
-        expires 7d;
-        add_header Cache-Control "public, must-revalidate" always;
+	# reverse proxy
+	location / {
+        auth_request /auth;
+        auth_request_set $new_cookie $sent_http_set_cookie;
+        auth_request_set $auth_status $upstream_status;
+
+        add_header Set-Cookie $new_cookie;
+		proxy_pass http://127.0.0.1:2222;
+		proxy_http_version	1.1;
+        proxy_cache_bypass	$http_upgrade;
+
+        proxy_set_header Upgrade			$http_upgrade;
+        proxy_set_header Connection 		"upgrade";
+        proxy_set_header Host				$host;
+        proxy_set_header X-Real-IP			$remote_addr;
+        proxy_set_header X-Forwarded-For	$proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto	$scheme;
+        proxy_set_header X-Forwarded-Host	$host;
+        proxy_set_header X-Forwarded-Port	$server_port;
+	}
+}
+
+
+
+# HTTP redirect
+# For VS Code
+server {
+	listen 5000;
+
+	listen [::]:5000;
+
+	server_name _;
+    location = /auth {
+        internal;
+        set $query '';
+        if ($request_uri ~* "[^\?]+\?(.*)$") {
+            set $query $1;
+        }
+
+        proxy_pass http://127.0.0.1:8080/auth?$query;
+        auth_request_set $saved_set_cookie $upstream_http_set_cookie;
+        add_header Set-Cookie $saved_set_cookie;
+
+        proxy_pass_request_body off;
+        proxy_set_header        Content-Length "";
+        proxy_set_header        X-Original-URI $request_uri;
     }
-    
-    # 禁止訪問隱藏文件
-    location ~ /\. {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
+
+	location / {
+        auth_request /auth;
+        auth_request_set $new_cookie $sent_http_set_cookie;
+        auth_request_set $auth_status $upstream_status;
+        add_header Set-Cookie $new_cookie;
+		proxy_pass http://127.0.0.1:4000/;
+        proxy_set_header X-Forwarded-Host $http_host;
+
+		proxy_http_version	1.1;
+        proxy_cache_bypass	$http_upgrade;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Accept-Encoding gzip;
+        proxy_read_timeout 86400;
+        proxy_set_header Host				$host;
+        proxy_set_header X-Real-IP			$remote_addr;
+        proxy_set_header X-Forwarded-For	$proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto	$scheme;
+        proxy_set_header X-Forwarded-Port	$server_port;
+	}
 }
